fix character error

--- a/data/articles/seeing-reading.mdx
+++ b/data/articles/seeing-reading.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Seeing and reading is not enough!'
 publishedAt: '2021-01-19'
-summary: 'I spent my last year with studying to improve my skills. Maybe wasn't the most efficient way to level up.'
+summary: 'I spent my last year with studying to improve my skills. Maybe was not the most efficient way to level up.'
 ---
 
 In the recent years I spent many hours to read the greatest design books. I took notes from them like a good student. 
