--- a/data/uses.mdx
+++ b/data/uses.mdx
@@ -2,16 +2,13 @@
 
 *work in progress*
 
-## Designing screens
-- Sketchapp
-- Figma
+## Javascript Framework
+- NextJS based on ReacJS
 - Origami Studio
 
 
-## Development
-- VS Code 
+## Style sheet
+- Tailwindcss
 
-## My home page
-- NextJS
-- TailwindCSS
+## Hosting
 - Vercel
