--- a/data/articles/future-of-creators.mdx
+++ b/data/articles/future-of-creators.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Feeling responsible for the future creators'
+title: 'What about the creators of tomorrow?'
 publishedAt: '2021-01-21'
 summary: 'Today developers are the one who shape our world. But most of them are stuck and under rated.'
 ---
