--- a/data/articles/job-application.mdx
+++ b/data/articles/job-application.mdx
@@ -1,15 +1,15 @@
 ---
-title: 'A job application is for free'
+title: 'The job application is for free'
 publishedAt: '2021-01-13'
-summary: 'A note about my realisation regards job interviews'
+summary: 'Sometimes we consider getting a job, but afraid to submit the first application because we think we are not ready...'
 ---
 
-In 2017 I had a crazy idea: let's move from software engineer to ux design because it sounded like a cool idea. 
+In 2017 I had a crazy idea: let's move from software engineering to ux design because it sounded like a cool idea. 
 
-I wanted to do it right, so I studied how others prepare their portfolio, CV etc. I was prepared... 
+After a bunch of self study and courses I wanted to do the job interviews right, so I studied how others prepare their portfolio, CV etc. I was prepared... 
 
-After around 50-60 rejections I started to see that things are not working as I thought they will. And it is true, how a random guy from US can show me how to get hired in here Switzerland? Too many differences...
+After around 50-60 rejections I started to see that things did not work so easily as I thought they will. So many videos, articles and books with guarantee to succeed and yet non of them worked for me. I could not get even into the second round. I did not know how to do the interview properly.
 
-In the end I used the interviews as a place to practice. I told the story of my resume, my portfolio so many times.
+In the end I decided to use the interviews as a place to practice, I sent my applications to all companies with a matching role I am looking for. If I wanted to rock on an interview, I needed to be good at it. I told the story of my resume so many times to so many different people, that I became fluent.
 
-On an interview super difficult to test if you are a good fit for a job/company/team. They can test if you can pass the interview. With practice I could pass that interview, because job applications are for free!
+The thing is, it is super difficult to test if you are a good fit for a job/company/team. They can test if you can 'pass the interview test'. Luckily applications are for free!
