--- a/data/articles/seeing-reading.mdx
+++ b/data/articles/seeing-reading.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Seeing and reading is not enough!'
+title: 'Reading is not enough!'
 publishedAt: '2021-01-19'
-summary: 'I spent my last year with studying to improve my skills. Maybe was not the most efficient way to level up.'
+summary: 'After I read a design book I feel smart until I have to solve a real problem. Then I realize, the book was not enough.'
 ---
 
-In the recent years I spent many hours to read the greatest design books. I took notes from them like a good student. 
+In the recent years I spent many hours to read the greatest design books. I have taken great notes like a good student. In office I used to even present these learnings.
 
-Now I finally got a real project to ship, I realized I can't use most of that knowledge. 
+Recently I got a side project where it striked me how much practical knowledge I am missing to ship the solution. It is good to know about design principles, but when a client wants a site in 2 weeks, it is about the ability to build something that works and release it.
 
-Also, I observed and collected so many well designed apps and websites. Recently I built something instead of reading about it, my learning was exponential. I can recommend it to you! 
+After this project I decided to switch to a hybrid approach. I start with a project what I want to ship and I pick up the knowledge on the way. 
