add 100 days project

--- a/data/projects/100days-illustration.mdx
+++ b/data/projects/100days-illustration.mdx
@@ -1,10 +1,27 @@
 ---
-title: "100 days of illustration"
-publishedAt: "2021-01-26"
-summary: "After I read a design book I feel smart until I have to solve a real problem. Then I realize, the book was not enough."
+title: '100 days of illustrations'
+publishedAt: '2021-01-26'
+summary: 'Sketches done on paper and final vector illustrations produced using Adobe Illustrator.'
 ---
 
-Inspired by many creators, I've decided to perfect my craft and challenge myself with the 100 days of creative work. I always wanted to master vector illustrations.
+<div className="sm:max-w-3xl text-gray-600 py-4">
 
-## Tools I used
+<p className="py-2 "> 
+Project timeline from 2019.06.05 until 2019.09.12.
+</p>
 
+<p className="py-2 ">
+Inspired by many creatives, I've decided to deepen my drawing skills and challenge myself with the 100 days of creative work.
+I chose vector illustrations done in Adobe Illustrator and later I switched to simple raster drawings done with procreate iPad app.
+</p>
+
+<p className="py-2 ">
+As you can see below, I did succeed completing all 100 days. 
+</p>
+
+<p className="py-2 pb-8">
+If you are interested to see them in higher resolution, head to <a className="underline font-bold text-black" href="https://www.instagram.com/szolikladislav/">my instagram page</a>.  
+</p>
+
+<Image alt="illustrations" width={1024} height={4096} src={`/projects/100illustrations.png`}  />
+</div>
