--- a/data/articles/not-enough-ideas.mdx
+++ b/data/articles/not-enough-ideas.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Not enough ideas'
-publishedAt: '2021-02-24'
-summary: 'I am not able to startup my business. I think it is because I haven't got a good idea for that.'
+title: "Not enough ideas"
+publishedAt: "2021-02-24"
+summary: "I am not able to startup my business. I think it is because I have not got a good idea for that."
 ---
 
 I have this vision of being able to boot up my laptop and create a business. Without investors or large teams.
